--- a/Projet.html
+++ b/Projet.html
@@ -1,13 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
    <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Mon Mémento</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="Projet.css" />
+    <title>WarFriends</title>
   </head>
   <body>
-    <h1>La ligne de commande</h1>
-    <h2>Gestion de documents</h2>
-    <p>Pour créer un dossier je dois utiliser cette commande : </p>
-    <pre><code></code></pre>
+    <header>
+      <h1><a href="Projet.html" Title="home"><img src="miniWarframe.png" alt="miniWarframe" title="miniWarframe" /></a>WarFriends</h1>
+      <nav>
+        <ul>
+          <li><a href="Projet.html" Title="home">Home</a></li>
+          <li><a href="Login.html" Titre="Login/register">Login/Register</a></li>
+          <li><a href="Us.html" Titre="About us">About us</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
