avancement du background et du header

--- a/Projet.html
+++ b/Projet.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
-   <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="Projet.css" />
-    <title>WarFriends</title>
-  </head>
-  <body>
-    <header>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="Projet.css" />
+  <title>WarFriends</title>
+</head>
+
+<body>
+  <header>
+    <div class="topBorder">
+
       <h1><a href="Projet.html" Title="home"><img src="miniWarframe.png" alt="miniWarframe" title="miniWarframe" /></a>WarFriends</h1>
       <nav>
-        <ul>
-          <li><a href="Projet.html" Title="home">Home</a></li>
-          <li><a href="Login.html" Titre="Login/register">Login/Register</a></li>
-          <li><a href="Us.html" Titre="About us">About us</a></li>
-        </ul>
+        <form class="" action="index.html" method="post">
+          <ul>
+            <li><a href="Projet.html" Title="home">Home</a></li>
+            <li><label for="Login">Login : </label><input type="text" name="Login" id="Login" placeholder="Login" /><input type="password" name="Password" id="Password" placeholder="Password" />
+              <input type="submit" value="Connexion" /></li>
+            <li><a href="Us.html" Titre="About us">About us</a></li>
+          </ul>
+        </form>
       </nav>
-    </header>
-  </body>
+    </div>
+  </header>
+  <section>
+
+  </section>
+</body>
+
 </html>
