--- a/Projet.html
+++ b/Projet.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" ng-app="warfriendsApp">
 
 <head>
   <meta charset="utf-8" />
@@ -7,37 +7,35 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Germania+One" rel="stylesheet">
-  <link rel="stylesheet" href="ProjetHomePage.css">
+  <link rel="stylesheet" href="assets/css/ProjetHomePage.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
   <title>warFriends</title>
 </head>
 
 <body>
     <div class="topBorder sticky-top">
-      <h1 class="text-left text-light font-weight-bold font-family-germania"><a href="Projet.html" Title="home"><img class="img-fluid" src="Images/miniWarframe.png" alt="miniWarframe" title="miniWarframe" id="miniWar"/></a>WarFriends</h1>
+      <h1 class="text-left text-light font-weight-bold font-family-germania"><a href="Projet.html" Title="home"><img class="img-fluid" src="assets/Images/miniWarframe.png" alt="miniWarframe" title="miniWarframe" id="miniWar"/></a>WarFriends</h1>
       <nav class="navbar navbar-expand-lg fixed-top fixed-right">
           <button class="navbar-toggler navbar-light w-100 warButton" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="text-right text-danger font-family-germania font-weight-bold">Warfriends<i class="warButton fa fa-sort-desc" aria-hidden="true"></i>
+            <span class="text-right text-light font-family-germania font-weight-bold">Warfriends<i class="warButton fa fa-sort-desc" aria-hidden="true"></i>
 </span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item font-family-germania bg-dark rounded text-center mr-2 h4">
-                <a class="text-danger nav-link" href="#" id="home">Accueil</a>
+                <a class="text-light nav-link" href="Projet.html" id="home">Accueil</a>
               </li>
               <li class="nav-item font-family-germania bg-dark rounded text-center mr-2 h4">
-                <a class="text-danger nav-link" href="#">A propos de WarFriends</a>
+                <a class="text-light nav-link" href="#">A propos de WarFriends</a>
               </li>
               <li class="nav-item font-family-germania bg-dark rounded text-center mr-2 h4">
-                <a class="text-danger nav-link" href="#">Connexion</a>
+                <a class="text-light nav-link" data-toggle="modal" data-target="#connexionModal">Connexion/s'inscrire</a>
               </li>
               <li class="nav-item font-family-germania bg-dark rounded text-center d-none mr-2 h4">
-                <a class="text-danger nav-link" href="#">Déconnexion</a>
-              </li>
-              <li class="nav-item font-family-germania bg-dark rounded text-center mr-2 h4">
-                <a class="text-danger nav-link" href="#" id="inscription">S'inscrire</a>
+                <a class="text-light nav-link" href="#">Déconnexion</a>
               </li>
               <li class="nav-item font-family-germania bg-dark rounded text-center d-none mr-2 h4">
-                <a class="text-danger nav-link" href="#">Mon compte</a>
+                <a class="text-light nav-link" href="#">Mon compte</a>
               </li>
             </ul>
           </div>
@@ -46,86 +44,44 @@
         <div class="container-fluid" id="divHomeText">
           <p class="h3 font-weight-bold text-danger font-family-germania" id="homePageText">Find friends. Exchange. Get stronger.</p>
         </div>
+
+  <!-- Modal -->
+<div class="modal fade font-family-germania text-light" id="connexionModal" tabindex="-1" role="dialog" aria-labelledby="ModalTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content bg-dark">
+      <div class="modal-header">
+        <p class="modal-title h4 font-weight-bold" id="ModalTitle">Connexion</p>
+        <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form ng-controller="connexionFormCtrl" id="connexionForm" action="index.html" method="post">
+          <fieldset class="text-center">
+            <div><label for="mail">Adresse Mail : </label><input type="email" name="mail" id="mail" ng-pattern="regexMail" ng-model="connexionMail" required/></div>
+            <div class="rem"></div>
+            <div>
+            <label for="password">Mot de passe :</label><input type="password" name="password" ng-pattern="regexPassword" ng-model="connexionPassword" id="password" required/>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-light text-dark" form="connexionForm">Connexion</button>
+      </div>
+      <a href="form.html" class="text-light text-center h6 font-weight-bold">Ou bien inscrivez vous</a>
+    </div>
+  </div>
+</div>
       <p id="mainContent">
 
-Victus universis caro ferina est lactisque abundans copia qua sustentantur, et herbae multiplices et siquae alites capi per aucupium possint, et plerosque mos vidimus frumenti usum et vini penitus ignorantes.
-
-Hanc regionem praestitutis celebritati diebus invadere parans dux ante edictus per solitudines Aboraeque amnis herbidas ripas, suorum indicio proditus, qui admissi flagitii metu exagitati ad praesidia descivere Romana. absque ullo egressus effectu deinde tabescebat immobilis.
-
-Post haec Gallus Hierapolim profecturus ut expeditioni specie tenus adesset, Antiochensi plebi suppliciter obsecranti ut inediae dispelleret metum, quae per multas difficilisque causas adfore iam sperabatur, non ut mos est principibus, quorum diffusa potestas localibus subinde medetur aerumnis, disponi quicquam statuit vel ex provinciis alimenta transferri conterminis, sed consularem Syriae Theophilum prope adstantem ultima metuenti multitudini dedit id adsidue replicando quod invito rectore nullus egere poterit victu.
-
-Exsistit autem hoc loco quaedam quaestio subdifficilis, num quando amici novi, digni amicitia, veteribus sint anteponendi, ut equis vetulis teneros anteponere solemus. Indigna homine dubitatio! Non enim debent esse amicitiarum sicut aliarum rerum satietates; veterrima quaeque, ut ea vina, quae vetustatem ferunt, esse debet suavissima; verumque illud est, quod dicitur, multos modios salis simul edendos esse, ut amicitiae munus expletum sit.
-
-Et hanc quidem praeter oppida multa duae civitates exornant Seleucia opus Seleuci regis, et Claudiopolis quam deduxit coloniam Claudius Caesar. Isaura enim antehac nimium potens, olim subversa ut rebellatrix interneciva aegre vestigia claritudinis pristinae monstrat admodum pauca.
-
-Mox dicta finierat, multitudo omnis ad, quae imperator voluit, promptior laudato consilio consensit in pacem ea ratione maxime percita, quod norat expeditionibus crebris fortunam eius in malis tantum civilibus vigilasse, cum autem bella moverentur externa, accidisse plerumque luctuosa, icto post haec foedere gentium ritu perfectaque sollemnitate imperator Mediolanum ad hiberna discessit.
-
-Sed (saepe enim redeo ad Scipionem, cuius omnis sermo erat de amicitia) querebatur, quod omnibus in rebus homines diligentiores essent; capras et oves quot quisque haberet, dicere posse, amicos quot haberet, non posse dicere et in illis quidem parandis adhibere curam, in amicis eligendis neglegentis esse nec habere quasi signa quaedam et notas, quibus eos qui ad amicitias essent idonei, iudicarent. Sunt igitur firmi et stabiles et constantes eligendi; cuius generis est magna penuria. Et iudicare difficile est sane nisi expertum; experiendum autem est in ipsa amicitia. Ita praecurrit amicitia iudicium tollitque experiendi potestatem.
-
-Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis, iudices, nec descensurum quemquam ad hanc accusationem fuisse, cui, utrum vellet, liceret, nec, cum descendisset, quicquam habiturum spei fuisse, nisi alicuius intolerabili libidine et nimis acerbo odio niteretur. Sed ego Atratino, humanissimo atque optimo adulescenti meo necessario, ignosco, qui habet excusationem vel pietatis vel necessitatis vel aetatis. Si voluit accusare, pietati tribuo, si iussus est, necessitati, si speravit aliquid, pueritiae. Ceteris non modo nihil ignoscendum, sed etiam acriter est resistendum.
-
-Orientis vero limes in longum protentus et rectum ab Euphratis fluminis ripis ad usque supercilia porrigitur Nili, laeva Saracenis conterminans gentibus, dextra pelagi fragoribus patens, quam plagam Nicator Seleucus occupatam auxit magnum in modum, cum post Alexandri Macedonis obitum successorio iure teneret regna Persidis, efficaciae inpetrabilis rex, ut indicat cognomentum.
-
-Itaque verae amicitiae difficillime reperiuntur in iis qui in honoribus reque publica versantur; ubi enim istum invenias qui honorem amici anteponat suo? Quid? Haec ut omittam, quam graves, quam difficiles plerisque videntur calamitatum societates! Ad quas non est facile inventu qui descendant. Quamquam Ennius recte.
-
-Iam in altera philosophiae parte. quae est quaerendi ac disserendi, quae logikh dicitur, iste vester plane, ut mihi quidem videtur, inermis ac nudus est. tollit definitiones, nihil de dividendo ac partiendo docet, non quo modo efficiatur concludaturque ratio tradit, non qua via captiosa solvantur ambigua distinguantur ostendit; iudicia rerum in sensibus ponit, quibus si semel aliquid falsi pro vero probatum sit, sublatum esse omne iudicium veri et falsi putat.
-
-Quibus occurrere bene pertinax miles explicatis ordinibus parans hastisque feriens scuta qui habitus iram pugnantium concitat et dolorem proximos iam gestu terrebat sed eum in certamen alacriter consurgentem revocavere ductores rati intempestivum anceps subire certamen cum haut longe muri distarent, quorum tutela securitas poterat in solido locari cunctorum.
-
-Horum adventum praedocti speculationibus fidis rectores militum tessera data sollemni armatos omnes celeri eduxere procursu et agiliter praeterito Calycadni fluminis ponte, cuius undarum magnitudo murorum adluit turres, in speciem locavere pugnandi. neque tamen exiluit quisquam nec permissus est congredi. formidabatur enim flagrans vesania manus et superior numero et ruitura sine respectu salutis in ferrum.
-
-Ideo urbs venerabilis post superbas efferatarum gentium cervices oppressas latasque leges fundamenta libertatis et retinacula sempiterna velut frugi parens et prudens et dives Caesaribus tamquam liberis suis regenda patrimonii iura permisit.
-
-Paphius quin etiam et Cornelius senatores, ambo venenorum artibus pravis se polluisse confessi, eodem pronuntiante Maximino sunt interfecti. pari sorte etiam procurator monetae extinctus est. Sericum enim et Asbolium supra dictos, quoniam cum hortaretur passim nominare, quos vellent, adiecta religione firmarat, nullum igni vel ferro se puniri iussurum, plumbi validis ictibus interemit. et post hoe flammis Campensem aruspicem dedit, in negotio eius nullo sacramento constrictus.
 </p>
-<form class="w-100 d-none" action="index.html" method="post" id="inscriptionForm">
-  <div class="row">
-    <div class="col-sm-2 col-md-2 col-lg-2 col-xl-2"></div>
-    <div class="col-sm-8 col-md-8 col-lg-8 col-xl-8">
-  <fieldset class="text-center w-100 bg-dark text-light rounded mt-4" id="personnalInfos">
-    <legend class="bg-dark text-light font-weight-bold h2 text-center rounded">Données personnelles</legend>
-    <div class="rem"></div>
-    <div><label class="d-inline-block text-center" for="lastName">Votre nom :</label><input class="d-inline-block" type="text" name="lastName" id="lastName" placeholder="Dupont" /></div>
-    <div class="rem"></div>
-    <div><label class="d-inline-block text-center" for="firstName">Votre prénom : </label><input class="d-inline-block" type="text" name="firstName" id="firstName" placeholder="Bertrand" /></div>
-    <div class="rem"></div>
-    <div><label class="d-inline-block text-center" for="birthDay">Votre date de naissance* : </label><input class="d-inline-block"  type="date" name="birthDay" id="birthDay" placeholder="YYYY/MM/DD" required/></div>
-    <div class="rem"></div>
-    <div><label class="d-inline-block text-center" for="Pseudo">Vote pseudo* :</label><input class="d-inline-block" type="text" name="pseudo" id="pseudo" placeholder="Mon super Pseudo" required/></div>
-    <div class="rem"></div>
-    <div><label class="d-inline-block text-center" for="mail">Votre adresse mail* :</label><input class="d-inline-block" type="email" name="mail" id="mail" placeholder="patati@patata.com" required/></div>
-    <div class="rem"></div>
-    <div><label class="d-inline-block text-center" for="discord">Votre tag discord :</label><input class="d-inline-block" type="text" name="discord" id="discord" placeholder="#1234" /></div>
-    <div class="rem"></div>
-  </fieldset>
-</div>
-<div class="col-sm-2 col-md-2 col-lg-2 col-xl-2"></div>
-<div class="col-sm-2 col-md-2 col-lg-2 col-xl-2"></div>
-<div class="col-sm-8 col-md-8 col-lg-8 col-xl-8">
-  <fieldset class="text-center w-100 bg-danger text-light rounded mt-5" id="warframeInfos">
-    <legend class="bg-danger text-light font-weight-bold h2 text-center rounded">Informations relatives à Warframe</legend>
-    <div><label class="d-inline-block text-center" for="lastName">Votre nom :</label><input class="d-inline-block" type="text" name="lastName" id="lastName" placeholder="Dupont" /></div>
-    <div class="rem"></div>
-    <div><label class="d-inline-block text-center" for="lastName">Votre nom :</label><input class="d-inline-block" type="text" name="lastName" id="lastName" placeholder="Dupont" /></div>
-    <div class="rem"></div>
-    <div><label class="d-inline-block text-center" for="lastName">Votre nom :</label><input class="d-inline-block" type="text" name="lastName" id="lastName" placeholder="Dupont" /></div>
-    <div class="rem"></div>
-    <div><label class="d-inline-block text-center" for="lastName">Votre nom :</label><input class="d-inline-block" type="text" name="lastName" id="lastName" placeholder="Dupont" /></div>
-    <div class="rem"></div>
-    <div><label class="d-inline-block text-center" for="lastName">Votre nom :</label><input class="d-inline-block" type="text" name="lastName" id="lastName" placeholder="Dupont" /></div>
-    <div class="rem"></div>
-    <div><label class="d-inline-block text-center" for="lastName">Votre nom :</label><input class="d-inline-block" type="text" name="lastName" id="lastName" placeholder="Dupont" /></div>
-    <div class="rem"></div>
-    <div><label class="d-inline-block text-center" for="lastName">Votre nom :</label><input class="d-inline-block" type="text" name="lastName" id="lastName" placeholder="Dupont" /></div>
-    <div class="rem"></div>
-  </fieldset>
-</div>
-</form>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="Projet.js"></script>
+    <script src="assets/scripts/Projet.js"></script>
 
   </body>
 
